# investment-memo-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
data/ground_truth/: sample_lazo_call1_gt.json
evals/: ab_test_extraction.py  ab_test_memo.py  baselines.json  eval_extraction.py  eval_gap_analysis.py  eval_ingestion.py  eval_memo.py  eval_multicall.py  eval_pipeline.py  eval_recommendation.py
evals/judges/: extraction_judge.py  gap_judge.py  memo_judge.py  recommendation_judge.py
schemas/: extraction_call1.json  extraction_call2.json  extraction_call3.json  extraction_call4.json  gap_analysis.json  memo_template.json
src/: api_retry.py  pipeline.py  tracing.py
src/extraction/: __init__.py  extractor.py  prompt_variants.py  prompts.py
src/gap_analysis/: analyzer.py  prompts.py
src/ingestion/: __init__.py  deck_fetcher.py  document_processor.py  merger.py
src/initial_evaluation/: __init__.py  evaluator.py  prompts.py
src/integrations/: __init__.py  attio.py  google_docs.py
src/memo_generation/: generator.py  prompt_variants.py  prompts.py
src/recommendation/: __init__.py  engine.py  prompts.py
src/slack/: app.py  formatters.py  parser.py
src/state/: __init__.py  manager.py
